--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,8 @@ GameOfLife/GameOfLife/GameOfLife.vcxproj.user
 
 GameOfLife/GameOfLife.sln
 
+*.DS_Store
+
 # Visual Studio 2015 cache/options directory
 .vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
