--- a/.gitignore
+++ b/.gitignore
@@ -147,3 +147,4 @@ CMakeLists.txt.user*
 # Qt Creator backups
 GameOfLife/GameOfLife.VC.db
 GameOfLife/GameOfLife.sdf
+GameOfLife/GameOfLife.opensdf
